config/lustre-build.m4
@@ -677,12 +677,12 @@ LB_CONFIG_MPITESTS
 LB_CONFIG_SERVERS
 LC_CONFIG_CRYPTO
 LC_GLIBC_SUPPORT_COPY_FILE_RANGE
+LC_OPENSSL_SSK
 
 # Tests depends from utils (multiop from liblustreapi)
 AS_IF([test "x$enable_utils" = xno], [enable_tests="no"])
 
 AS_IF([test "x$enable_utils" = xyes], [
-	LC_OPENSSL_SSK
 	LC_OPENSSL_GETSEPOL
 	LC_FID2PATH_ANON_UNION
 	LC_IOC_REMOVE_ENTRY
